<?xml version="1.0" encoding="utf-8"?>
<com.colud.jctl.ui.custom.SoftInputRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.colud.jctl.ui.custom.TitleBar
        style="@style/toolbarStyleGreen"
        android:id="@+id/title_toolbar">

        <TextView
            android:id="@+id/title_cotent"
            android:layout_width="wrap_content"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"
            android:layout_gravity="right"
            android:gravity="right"
            android:visibility="gone"
            android:textSize="@dimen/sp_font_15"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/title_right_img"
            android:layout_width="wrap_content"
            android:scaleType="centerCrop"
            android:layout_gravity="right"
            android:gravity="right"
            android:visibility="gone"
            android:layout_marginRight="@dimen/margin_15dp"
            android:src="@drawable/add_right"
            android:layout_height="wrap_content"/>

    </com.colud.jctl.ui.custom.TitleBar>

    <ScrollView
        android:layout_below="@+id/title_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="@dimen/margin_15dp"
                android:background="@drawable/layout_grayline_white"
                android:layout_height="@dimen/margin_50dp">

                <TextView
                    android:layout_width="@dimen/margin_102.5dp"
                    android:textSize="@dimen/sp_font_15"
                    android:textColor="@color/color_343434"
                    android:text="@string/tv_farm_number"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/et_addfarm_num"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/sp_font_13"
                    android:inputType="number"
                    android:background="@null"
                    android:hint="@string/hint_farm_number"
                    android:textColor="@color/color_343434"
                    android:textColorHint="@color/color_CECECE"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="@dimen/margin_15dp"
                android:paddingRight="@dimen/margin_15dp"
                android:layout_height="@dimen/margin_50dp">

                <TextView
                    android:layout_width="@dimen/margin_102.5dp"
                    android:textSize="@dimen/sp_font_15"
                    android:textColor="@color/color_343434"
                    android:text="@string/tv_farm_names"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/et_addfarm_name"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/sp_font_13"
                    android:hint="@string/hint_farm_names"
                    android:background="@null"
                    android:textColor="@color/color_343434"
                    android:textColorHint="@color/color_CECECE"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="@dimen/margin_15dp"
                android:paddingRight="@dimen/margin_15dp"
                android:background="@drawable/layout_grayline_white"
                android:layout_height="@dimen/margin_50dp">

                <TextView
                    android:layout_width="@dimen/margin_102.5dp"
                    android:textSize="@dimen/sp_font_15"
                    android:textColor="@color/color_343434"
                    android:text="@string/tv_farm_area"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/et_addfarm_crea"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/sp_font_13"
                    android:background="@null"
                    android:hint="@string/hint_farm_crea"
                    android:inputType="numberDecimal"
                    android:textColor="@color/color_343434"
                    android:textColorHint="@color/color_CECECE"
                    android:layout_height="match_parent"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/addfarm_kind_rl"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/margin_15dp"
                android:paddingRight="@dimen/margin_15dp"
                android:layout_height="@dimen/margin_50dp">

                <TextView
                    android:id="@+id/tv_kindleft"
                    android:layout_width="@dimen/margin_102.5dp"
                    android:textSize="@dimen/sp_font_15"
                    android:layout_centerVertical="true"
                    android:textColor="@color/color_343434"
                    android:text="@string/tv_farm_kind"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/et_addfarm_kind"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/sp_font_13"
                    android:background="@null"
                    android:hint="@string/hint_farm_kind"
                    android:textColor="@color/color_343434"
                    android:textColorHint="@color/color_CECECE"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:background="@color/grayline"
                android:layout_height="@dimen/margin_1">

            </View>

            <RelativeLayout
                android:id="@+id/addfarm_address_rl"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/margin_15dp"
                android:paddingRight="@dimen/margin_15dp"
                android:layout_height="@dimen/margin_50dp">

                <TextView
                    android:id="@+id/tv_addfarmleft"
                    android:layout_width="@dimen/margin_102.5dp"
                    android:textSize="@dimen/sp_font_15"
                    android:layout_centerVertical="true"
                    android:textColor="@color/color_343434"
                    android:text="@string/tv_farm_address"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_kindaddRess"
                    android:layout_toRightOf="@+id/tv_addfarmleft"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/sp_font_15"
                    android:layout_centerVertical="true"
                    android:textColor="@color/color_343434"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:scaleType="centerCrop"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/right_in"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/addfarm_jj_rl"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/margin_15dp"
                android:background="@drawable/layout_grayline_white"
                android:layout_height="@dimen/margin_200dp">

                <TextView
                    android:id="@+id/tv_jj"
                    android:layout_width="@dimen/margin_102.5dp"
                    android:textSize="@dimen/sp_font_15"
                    android:layout_centerVertical="true"
                    android:textColor="@color/color_343434"
                    android:text="@string/tv_jj"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_toRightOf="@+id/tv_jj"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_10dp"
                    android:layout_margin="@dimen/margin_10dp"
                    android:background="@drawable/layout_grayline_white"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/et_jj"
                        android:layout_width="wrap_content"
                        android:hint="@string/hint_ncjj"
                        android:textSize="@dimen/sp_font_13"
                        android:gravity="top|left"
                        android:textColorHint="@color/color_CECECE"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:textColor="@color/color_343434"
                        android:layout_height="match_parent"/>
                </LinearLayout>


            </RelativeLayout>


        </LinearLayout>

    </ScrollView>


</com.colud.jctl.ui.custom.SoftInputRelativeLayout>